Update forum page design and fix alignment issues

--- a/client/src/Components/personalArea/SidebarNavigation/SidebarNavigation.css
+++ b/client/src/Components/personalArea/SidebarNavigation/SidebarNavigation.css
@@ -8,10 +8,6 @@
   width: 25vw;
 background-color: #D9D9D9;
 
-
-
-
-
 }
 
   @media (min-width: 1024px) {
@@ -24,21 +20,32 @@ background-color: #D9D9D9;
   
 .sidebar-navigation ul {
   list-style-type: none;
-  padding: 0; 
+  padding: 0 ;
   height: 100%;
   margin: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
 
 }
 
 .sidebar-navigation li {
   padding: 8px 16px; 
-  font-size: 25px;
-  text-align: center;
-  font-weight: 500;
+  text-align: right;
+font-family: 'Ploni ML v2 AAA';
+font-style: normal;
+font-weight: 500;
+font-size: 35px;
+line-height: 50px;
+gap: 10px;
+padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 5px 0;
+    border-radius: 10px;
+
 }
 
 .sidebar-navigation li a {
